# roguelike

./: .gitignore  Cargo copy.toml  Cargo.toml  skills.md  tareas.md
assets/models/: tree.mtl
assets/models/blood_in_the_water/: license.txt  scene.gltf
assets/models/magic_ring_red/: scene.glb
assets/models/magical_orb/: license.txt
assets/models/yellow_aura/: license.txt  scene.glb  scene.gltf
assets/shaders/: bujama.wgsl  decal.wgsl  decal2.wgsl  show_prepass.wgsl  water.wgsl  water_example.wgsl  water_shader.wgsl
assets/spritesheets/chasqui/: chasqui-20241207-161353.piskel
assets/terrain/: bujama-2.gltf  bujama-3.gltf  bujama.fbx  bujama.glb  bujama.gltf  bujama2.gltf
src/: client_plugins.rs  interpolation.rs  lib.rs  main.rs  monsters.rs  pathing.rs  pig.rs  server_plugins.rs  shared.rs  ui.rs
src/client_plugins/: client_clock_sync.rs  health.rs  interpolation.rs  menu.rs  music.rs  pointer.rs  shared.rs  shared_resources.rs  spell_animations.rs  water.rs
src/server_plugins/: combat.rs  physics.rs  server_clock_sync.rs
src/shared/: channels.rs  components.rs  constants.rs  messages.rs  states.rs
