[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"
default-run = "client"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "bevy_state"] }
bevy-inspector-egui = "0.25.1"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_egui = "0.29.0"
bevy_obj = "0.14.0"
bevy_panorbit_camera = "0.19.2"
bevy_renet = { version = "0.0.12", features = ["serde"] }
bevy_spatial = "0.9.0"
bevy_sprite3d = "3.0.0"
bincode = "1.3.3"
fastrand = "2.1.0"
local-ip-address = "0.6.1"
pathfinding = "4.10.0"
rand = "0.8.5"
renet_visualizer = { version = "0.0.9", features = ["bevy"] }
serde = { version = "1.0.204", features = ["derive"] }
smooth-bevy-cameras = "0.12.0"

